# serializer version: 1
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_filter_clean_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bedroom_filter_clean_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter clean required',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'filter_clean',
    'unique_id': 'BBZZBBZZ-filter_clean',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_filter_clean_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Bedroom Filter clean required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_filter_clean_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with AC',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_ac_integration',
    'unique_id': 'BBZZBBZZ-pure_ac_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bedroom Pure Boost linked with AC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_indoor_air_quality-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_indoor_air_quality',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with indoor air quality',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_measure_integration',
    'unique_id': 'BBZZBBZZ-pure_measure_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_indoor_air_quality-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bedroom Pure Boost linked with indoor air quality',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_indoor_air_quality',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_outdoor_air_quality-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_outdoor_air_quality',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with outdoor air quality',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_prime_integration',
    'unique_id': 'BBZZBBZZ-pure_prime_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_outdoor_air_quality-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bedroom Pure Boost linked with outdoor air quality',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_outdoor_air_quality',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_presence-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_presence',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with presence',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_geo_integration',
    'unique_id': 'BBZZBBZZ-pure_geo_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.bedroom_pure_boost_linked_with_presence-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bedroom Pure Boost linked with presence',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_pure_boost_linked_with_presence',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_filter_clean_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hallway_filter_clean_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter clean required',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'filter_clean',
    'unique_id': 'ABC999111-filter_clean',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_filter_clean_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Hallway Filter clean required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hallway_filter_clean_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_connectivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.hallway_motion_sensor_connectivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connectivity',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCC-alive',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_connectivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Hallway Motion Sensor Connectivity',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hallway_motion_sensor_connectivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_main_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.hallway_motion_sensor_main_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Main sensor',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_main_sensor',
    'unique_id': 'AABBCC-is_main_sensor',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_main_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Motion Sensor Main sensor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hallway_motion_sensor_main_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_motion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hallway_motion_sensor_motion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AABBCC-motion',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_motion_sensor_motion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Hallway Motion Sensor Motion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hallway_motion_sensor_motion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_room_occupied-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.hallway_room_occupied',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Room occupied',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'room_occupied',
    'unique_id': 'ABC999111-room_occupied',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.hallway_room_occupied-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Hallway Room occupied',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.hallway_room_occupied',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_filter_clean_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kitchen_filter_clean_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter clean required',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'filter_clean',
    'unique_id': 'AAZZAAZZ-filter_clean',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_filter_clean_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Kitchen Filter clean required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_filter_clean_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with AC',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_ac_integration',
    'unique_id': 'AAZZAAZZ-pure_ac_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Kitchen Pure Boost linked with AC',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_indoor_air_quality-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_indoor_air_quality',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with indoor air quality',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_measure_integration',
    'unique_id': 'AAZZAAZZ-pure_measure_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_indoor_air_quality-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Kitchen Pure Boost linked with indoor air quality',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_indoor_air_quality',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_outdoor_air_quality-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_outdoor_air_quality',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with outdoor air quality',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_prime_integration',
    'unique_id': 'AAZZAAZZ-pure_prime_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_outdoor_air_quality-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Kitchen Pure Boost linked with outdoor air quality',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_outdoor_air_quality',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_presence-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_presence',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Pure Boost linked with presence',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pure_geo_integration',
    'unique_id': 'AAZZAAZZ-pure_geo_integration',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[load_platforms0][binary_sensor.kitchen_pure_boost_linked_with_presence-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Kitchen Pure Boost linked with presence',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kitchen_pure_boost_linked_with_presence',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
